# ngpt

./: .env.example  COMMIT_GUIDELINES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: CONTRIBUTING.md  LICENSE  README.md  _config.yml  configuration.md  installation.md  overview.md
docs/api/: README.md  client.md  config.md
docs/assets/css/: style.scss
docs/examples/: README.md  advanced.md  basic.md  integrations.md
docs/usage/: README.md  cli_usage.md  library_usage.md
ngpt/: __init__.py  cli.py  client.py  config.py
tOAI/: __init__.py  cli.py  client.py  config.py
