[project]
name = "ngpt"
version = "1.0.0"
description = "A Python CLI and library for interacting with custom OpenAI API endpoints"
authors = [
    {name = "nazDridoy", email = "nazdridoy399@gmail.com"},
]
dependencies = [
    "requests>=2.28.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ngpt = "ngpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
