[project]
name = "ngpt"
version = "2.0.0"
description = "A lightweight Python CLI and library for interacting with OpenAI-compatible APIs, supporting both official and self-hosted LLM endpoints."
authors = [
    {name = "nazDridoy", email = "nazdridoy399@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["openai", "cli", "api-client", "llm", "ai", "gpt", "chatgpt", "gpt4free", "ngpt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
]

[project.urls]
"Homepage" = "https://github.com/nazdridoy/ngpt"
"Repository" = "https://github.com/nazdridoy/ngpt"
"Bug Tracker" = "https://github.com/nazdridoy/ngpt/issues"

[project.scripts]
ngpt = "ngpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
